# tree-sitter-bmb

./: README.md  binding.gyp  grammar.js  package.json
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: Cargo.toml  build.rs  lib.rs
queries/: folds.scm  highlights.scm  indents.scm
