[package]
name = "tree-sitter-bmb"
version = "0.1.0"
edition = "2021"
authors = ["BMB Language Team"]
description = "BMB language grammar for tree-sitter"
repository = "https://github.com/lang-bmb/tree-sitter-bmb"
license = "MIT"
keywords = ["tree-sitter", "parser", "bmb"]
categories = ["parsing", "text-editors"]
rust-version = "1.70"

build = "build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
]

[lib]
path = "lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.24"

[build-dependencies]
cc = "1.2"
